<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/renren_demo_pay_order_number"
            android:textColor="@color/pay_text" />

        <EditText
            android:id="@+id/order_number_edit_text"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:digits="1234567890"
            android:text="0000"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/renren_demo_pay_order_payment"
            android:textColor="@color/pay_text" />

        <EditText
            android:id="@+id/order_payment_edit_text"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="验证字段"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/renren_demo_pay_des"
            android:textColor="@color/pay_text" />

        <EditText
            android:id="@+id/order_des_edit_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="描述字段"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/renren_demo_pay_amount"
            android:textColor="@color/pay_text" />

        <EditText
            android:id="@+id/order_amount_edit_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:digits="1234567890"
            android:gravity="center"
            android:hint="订单金额"
            android:inputType="number"
            android:singleLine="true"
            android:text="10" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/renren_demo_pay_pay" />

        <Button
            android:id="@+id/repairBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/renren_demo_pay_open_repair" />
    </LinearLayout>

</LinearLayout>