<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentTop="true">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:paddingLeft="10dip"
			android:textColor="@color/status_hint_text"
			android:text="@string/status_label"></TextView>
		<EditText android:id="@+id/renren_status_pub_text"
			android:background="@drawable/renren_edit_text_bg"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="top" 
			android:textSize="16sp"
			android:minLines="3" android:focusable="true"
			android:focusableInTouchMode="true" 
			android:layout_weight="1"
			android:layout_margin="10dip" 
			android:padding="4dip" android:autoText="true" android:capitalize="sentences"
			android:hint="@string/renren_demo_status_hint" 
			android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"/>
		<Button android:id="@+id/renren_status_publish"
			android:layout_width="80dip"
			android:layout_height="36dip"
			android:layout_marginRight="20dip"
			android:layout_gravity="right"
			android:text="@string/status_pub_button" />	
		</LinearLayout>	
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true">
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="10dip" 
			android:layout_marginBottom="5dip"
			android:textColor="@color/status_hint_text"
			android:textSize="14sp" android:text="@string/response_result"
			android:layout_centerVertical="true" />
		<EditText 
			android:id="@+id/renren_status_pub_result_text"
			android:background="@drawable/renren_edit_text_bg"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="top" 
			android:minLines="3" 
			android:maxLines="5"
			android:textSize="16sp"
			android:layout_weight="1"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="10dip"
			android:padding="4dip" 
			android:inputType="textMultiLine"/>	
	</LinearLayout>
</RelativeLayout>	

